--- a/views/user/checkOutDetails.ejs
+++ b/views/user/checkOutDetails.ejs
@@ -15,7 +15,7 @@
    <div class="container  d-flex flex-column justify-content-center" style="height: 100vh;">
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item"><a href="/">Home</a></li>
+          <li class="breadcrumb-item"><a href="/orderhistory" style="text-decoration: none;">Order History</a></li>
           <li class="breadcrumb-item active" aria-current="page">Order Details</li>
         </ol>
       </nav>
@@ -36,7 +36,16 @@
             <% checkout.cart.items.forEach((item, index) => { %>
                 <div class="row shadow rounded p-3">
                     <div class="col-6 border shadow-sm rounded d-flex">
-                        <div><img class="img-fluid" width="100" src="https://plus.unsplash.com/premium_photo-1709311452427-fff3030eabbf?q=80&w=2187&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img"></div>
+                        <div class="col-4 h-100">
+                            <% 
+                            const variant = item.product.variants.find(variant => variant?.color === item.variant?.color);
+                            if (variant && variant.imageUrls && variant.imageUrls.length > 0) {
+                            %>
+                                <img class="img-fluid mt-4 rounded-3" src="<%= variant?.imageUrls[0] %>" class="card-img-top" alt="Product Image">
+                            <% } else { %>
+                                <img class="img-fluid mt-4 rounded-3" src="" class="card-img-top" alt="No Image Available">
+                            <% } %>
+                        </div>
                         <div class="px-4 mt-3" style="line-height: 1;">
                             <p><%= item.product?.name %></p>
                             <p>quantity: <%= item?.quantity %></p>
