--- a/views/user/productDetails.ejs
+++ b/views/user/productDetails.ejs
@@ -140,7 +140,7 @@
 							border-radius: 27px;
 							border: none;
 							background-image: linear-gradient(90deg, #ffba00 0%, #ff6c00 100%) !important;
-							outline: none;"><a href="/orderhistroy" style="color:#ffff;">Order history</a></button>
+							outline: none;"><a href="/orderhistory" style="color:#ffff;">Order history</a></button>
 							</li>
 							<li class="nav-item mx-3">
 								<a href="/profile" class="nav-link" 
@@ -304,7 +304,7 @@
 							</div>
 						</div>
 						<div>
-							<button class="btn" type="button" id="filterButton">Filter</button>
+							<button class="btn mx-3" type="button" id="filterButton">Filter</button>
 							
 						</div>
 						
@@ -807,7 +807,7 @@ Copyright &copy;&nbsp;<script>document.write(new Date().getFullYear());</script>
                 if (data.variants && data.variants.length > 0) {
                     updateProductDetails(data.variants[0]);
                 } else {
-                    alert('No variants found for the selected criteria');
+                    alert('No variants found for the selected criteria . Try different one');
                 }
             })
             .catch(error => {
