--- a/views/admin/ordersList.ejs
+++ b/views/admin/ordersList.ejs
@@ -115,7 +115,7 @@
                             <a class="nav-link in-active" href="/admin/transactionHistory"><i class="fas fa-history"></i> Transaction history</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link in-active" href="/admin/addProducts"><i class="bi bi-bag-plus-fill"></i> Add mens product</a>
+                            <a class="nav-link in-active" href="/admin/addProducts"><i class="bi bi-bag-plus-fill"></i>Add Product </a>
                         </li>
                        
                         <li class="nav-item">
