--- a/views/user/checkout.ejs
+++ b/views/user/checkout.ejs
@@ -194,12 +194,14 @@
                     </li>
                     <li>
                       <a href="#"
-                        >Shipping <span>Flat rate: ₹500.00</span></a
+                        >Shipping <span>Flat rate: ₹0.00</span></a
                       >
                     </li>
                     <li>
+                      <!-- <input type="hidden" name="shippingCost" value="0"> -->
+                      <input type="hidden" name="totalPrice" value="<%= cart[0]?.totalAmount + 0 %>">
                       <a href="#"
-                        >Total <span>₹<%= cart[0]?.totalAmount - 50 %></span></a
+                        >Total <span>₹<%= cart[0]?.totalAmount + 0 %></span></a
                       >
                     </li>
                   </ul>
@@ -315,7 +317,7 @@
             confirmButtonText: 'Yes, continue!'
           }).then((result) => {
             if (result.isConfirmed) {
-              // If user confirms, submit the form
+             
               form.submit();
             }
           });
