--- a/views/user/orderHistory.ejs
+++ b/views/user/orderHistory.ejs
@@ -147,7 +147,7 @@
 
 				   <div class="col-12">
 					<div class="card-body" style="line-height: 1.3;width: 400px;">
-						<h5 class="card-title"><b><%=item.product.name%></b></h5>
+						<h5 class="card-title"><b><%=item?.productName%></b></h5>
 						<p class="card-title">Payment Method: <b><%=details?.paymentMethod%></b> </p>
 						<p class="card-text">quantity:<b><%=item?.quantity%></b></p>
 						<p class="card-text">Discount: ₹0</p>
